# pans-webscraper

./: .gitignore  Dockerfile  LICENSE  algorithm.drawio  app.py  compose.yaml  concept.html  concept.ipynb  main.py  pyproject.toml  remote file change notifier.drawio  requirements.txt  settings.yaml  todo
data/: settings.yaml
