[project]
name = "pans-webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp>=3.8.5",
    "aioyagmail==0.0.4",
    "beautifulsoup4==4.12.3",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "cssselect==1.2.0",
    "cssutils==2.11.1",
    "idna==3.10",
    "lxml==5.3.0",
    "more-itertools==10.5.0",
    "premailer==3.10.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "soupsieve==2.6",
    "urllib3==2.2.3",
]
